--- a/pagCadastro/cadastroStyle.css
+++ b/pagCadastro/cadastroStyle.css
@@ -16,6 +16,26 @@ p {
 
 }
 
+.nassau{
+    /* border: 1px solid red; */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.area-nassau{
+    /* border: 1px solid black; */
+    width: 250px;
+}
+
+.area-nassau img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 form {
 
     display: flex;
